# gst-dots

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
js/: jquery.graphviz.svg.js
public/js/: jquery.graphviz.svg.js
src/: gstdump.rs  main.rs
static/: index.html  overlay.html
static/js/: gstdots.js  viz-standalone.mjs
static/templates/: single_graph_template.html
templates/: single_graph_template.html
views/: index.ejs
