[package]
name = "gstdots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.0"
actix-web-actors = "4.0"
actix-files = "0.6"
notify = "6.0"
tokio = { version = "1.0", features = ["full"] }
askama = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0.1"
serde_json = "1.0"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
